--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,18 @@
+@import url(./media-query.css);
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
 }
 :root{
     --nav-button-color:#1a73e8;
     --nav-button-font-color:#fff;
     --search-input:#DFE1E5;
+    --button-groups-background: #eaebec7c;
+    --input-focus:#b8b5b5;
+    --span-font:#4d5156;
+
 }
 .icons{
     width: 24px;
@@ -18,11 +24,13 @@ a{
     display: flex;
     flex-direction:column;
     height: 100vh;
-    justify-content: space-between;
+    
 }
 header{
+    /* background-color: brown; */
     display: flex;
     justify-content: flex-end;
+    flex-basis: 10%;
     padding: 10px;
 }
 header > nav{
@@ -32,6 +40,7 @@ header > nav{
 header nav a{
     color: #000;
     padding: 7px;
+    opacity: .8;
 }
 header nav a:hover{
     text-decoration: underline;
@@ -39,6 +48,7 @@ header nav a:hover{
 .nav-icon{
     margin-left:  8px;
     margin-right: 8px;
+    opacity: .8;
 }
 .nav-button{
     padding:9px 23px;
@@ -50,5 +60,109 @@ header nav a:hover{
     cursor: pointer;
 }
 section{
-    align-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    /* background-color:#1a73e8; */
+    flex: 1;
+    /* width: 100%; */
+    /* padding-top:20px ; */
+    
+    
+}
+section form{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: rgb(179, 68, 68); */
+    /* width: 100%; */
+    padding: 20px 0;
+    
+}
+section form input{
+    width: 42%;
+    height: 50px;
+    border-radius: 35px;
+    padding: 0px 50px;
+    border:1px solid #dedede;
+    font-size: 1rem;
+}
+section form input:focus{
+    box-shadow: 0px 0px 4px var(--input-focus) !important;
+}
+form .search-icon{
+    position: absolute;
+    left: 3%;
+    top: 21% !important;
+    opacity: .4;
+    z-index: 999;
+   
+}
+
+
+form .vs-icon{
+    position: absolute;
+    right: 9%;
+    top: 21%;
+    z-index: 99;
+}
+
+form .camera-img{
+    position: absolute;
+    right: 3%;
+    top: 21%;
+    z-index: 999;
+}
+.button-groups button{
+ padding: 10px 17px;
+ margin: 15px 4px;
+ background: var(--button-groups-background);
+ border:1px solid var(--button-groups-background);
+ border-radius: 4px;
+ color: var(--span-font);
+ font-size: .9rem;
+}
+
+section span{
+    color:var(--span-font);
+    font-size: .9rem;
+}
+section span a{
+    padding: 0 3px;
+}
+
+
+
+
+
+footer{
+    /* background-color: aqua; */
+    flex-basis: 15%;
+    display: flex;
+    flex-direction: column;
+    color: var(--span-font);
+    background: var(--button-groups-background);
+    /* padding:  px 0; */
+    
+
+}
+.footer-links{
+    display: flex;
+    justify-content: space-between;
+    /* padding: 15px; */
+    padding: 15px 6px ;
+}
+footer h4{
+    padding: 15px 30px;
+    color: var(--span-font);
+    border-bottom: 1px solid var(--search-input);
+    font-weight: 200;
+    
+}
+.footer-links a{
+    color: var(--span-font);
+    padding: 15px 15px;
+    border: none;
 }
