--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,17 @@ section form input{
 section form input:focus{
     box-shadow: 0px 0px 4px var(--input-focus) !important;
 }
+.fa-xmark{
+    position: absolute;
+    right: 15%;
+    top: 22%;
+    font-size: 22px;
+    display: none;
+    cursor: pointer;
+}
+.goster{
+    display: block;
+}
 form .search-icon{
     position: absolute;
     left: 3%;
